Bug 1659965 - Initialize the profiler before CodeCoverageHandler. r=mstange

CodeCoverageHandler relies upon CrossProcessMutex. On Linux this is
implemented using shared memory. In bug 1658847, we used to the
profiler's "thread sleep" mechanism to resolve the signal interrupts in
posix_fallocate, which requires the profiler to be initialized. As such,
CodeCoverageHandler now needs to be initialized after.

Differential Revision: https://phabricator.services.mozilla.com/D87747